[gd_scene load_steps=5 format=3 uid="uid://welgauuh3a7l"]

[ext_resource type="Script" uid="uid://dqkegwejr2dwd" path="res://gameplay/ui/player_hud.gd" id="1_np855"]

[sub_resource type="ViewportTexture" id="ViewportTexture_np855"]
viewport_path = NodePath("Hud_SubViewport")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_sqpyy"]
resource_local_to_scene = true
transparency = 1
shading_mode = 0
specular_mode = 2
albedo_texture = SubResource("ViewportTexture_np855")

[sub_resource type="QuadMesh" id="QuadMesh_dj84k"]
material = SubResource("StandardMaterial3D_sqpyy")
size = Vector2(1.6, 0.9)

[node name="PlayerHud" type="Node3D"]
script = ExtResource("1_np855")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("QuadMesh_dj84k")

[node name="Hud_SubViewport" type="SubViewport" parent="."]
disable_3d = true
transparent_bg = true
handle_input_locally = false
gui_disable_input = true
size = Vector2i(1024, 512)
render_target_update_mode = 4

[node name="HUD_root" type="Control" parent="Hud_SubViewport"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="MarginContainer" type="MarginContainer" parent="Hud_SubViewport/HUD_root"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 4

[node name="LeftDock" type="Control" parent="Hud_SubViewport/HUD_root/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Hud_SubViewport/HUD_root/MarginContainer/LeftDock"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.1
anchor_right = 0.05
anchor_bottom = 0.8
offset_right = 12.0
grow_vertical = 2
theme_override_constants/separation = 11

[node name="Guns_PowerBar" type="ProgressBar" parent="Hud_SubViewport/HUD_root/MarginContainer/LeftDock/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
value = 80.0
fill_mode = 3
show_percentage = false

[node name="Torps_AmmoBar" type="ProgressBar" parent="Hud_SubViewport/HUD_root/MarginContainer/LeftDock/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
value = 62.0
fill_mode = 3
show_percentage = false

[node name="RightDock" type="Control" parent="Hud_SubViewport/HUD_root/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Hud_SubViewport/HUD_root/MarginContainer/RightDock"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.95
anchor_top = 0.1
anchor_right = 1.0
anchor_bottom = 0.8
offset_left = -19.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/separation = 11

[node name="Health_Bar" type="ProgressBar" parent="Hud_SubViewport/HUD_root/MarginContainer/RightDock/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
value = 24.0
fill_mode = 3
show_percentage = false

[node name="Shields_Bar" type="ProgressBar" parent="Hud_SubViewport/HUD_root/MarginContainer/RightDock/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
value = 56.0
fill_mode = 3
show_percentage = false

[node name="BottomDock" type="Control" parent="Hud_SubViewport/HUD_root/MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Hud_SubViewport/HUD_root/MarginContainer/BottomDock"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.025
anchor_top = 0.89
anchor_right = 0.975
anchor_bottom = 0.952
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0

[node name="Boost_PowerBar_Left" type="ProgressBar" parent="Hud_SubViewport/HUD_root/MarginContainer/BottomDock/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
value = 80.0
fill_mode = 1
show_percentage = false

[node name="Boost_PowerBar_Right" type="ProgressBar" parent="Hud_SubViewport/HUD_root/MarginContainer/BottomDock/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
value = 80.0
show_percentage = false
